Updated colours page

--- a/public/colours.html
+++ b/public/colours.html
@@ -124,13 +124,13 @@
                   </div>
                 </div>
                 <div class="flex-container">
-                      <div class="flex-col-1-6 swatch swatch--beta--red"><p>Beta Red<br>@beta-red<br>#B10E1E</p></div>
-                      <div class="flex-col-1-6 swatch swatch--beta--orange"><p>Beta Orange<br>@beta-orange<br>#F47738</p></div>
-                      <div class="flex-col-1-6 swatch swatch--beta--yellow"><p>Beta Yellow<br>@beta-yellow<br>#FFBF47</p></div>
-                      <div class="flex-col-1-6 swatch swatch--beta--green"><p>Beta Green<br>@beta-green<br>#006435</p></div>
-                      <div class="flex-col-1-6 swatch swatch--beta--blue-darker"><p>Beta Blue Darker<br>@beta-blue<br>#003C64</p></div>
-                      <div class="flex-col-1-6 swatch swatch--beta--blue-light"><p>Beta Blue Light<br>@beta-blue-light<br>#A5BDDC</p></div>
-                      <div class="flex-col-1-6 swatch swatch--beta--aqua"><p>Beta Aqua<br>@beta-aqua<br>#81CEC6</p></div>
+                      <div class="flex-col-1-6 swatch swatch--beta--red"><p>Red<br>@red<br>#DF3034</p></div>
+                      <div class="flex-col-1-6 swatch swatch--beta--pink"><p>Pink<br>@pink<br>#FBC0AD</p></div>
+                      <div class="flex-col-1-6 swatch swatch--beta--orange"><p>Orange<br>@orange<br>#F47738</p></div>
+                      <div class="flex-col-1-6 swatch swatch--beta--yellow"><p>Yellow<br>@yellow<br>#FFBF47</p></div>
+                      <div class="flex-col-1-6 swatch swatch--beta--green"><p>Green<br>@green<br>#537D2D</p></div>
+                      <div class="flex-col-1-6 swatch swatch--beta--blue"><p>Blue<br>@blue<br>#003C64</p></div>
+                      <div class="flex-col-1-6 swatch swatch--beta--aqua"><p>Aqua<br>@aqua<br>#81CEC6</p></div>
                 </div>
 
                 <div class="flex-container">
@@ -140,8 +140,14 @@
                   </div>
                 </div>
                 <div class="flex-container">
-                      <div class="flex-col-1-6 swatch swatch--beta--yellow-light"><p>Beta Yellow-light<br>@beta-yellow-light<br>#FFBF47</p></div>
-                      <div class="flex-col-1-6 swatch swatch--beta--blue-light-tint"><p>Beta Blue Light Tint<br>@beta-blue-lighter<br>#A5BDDC</p></div>
+                      <div class="flex-col-1-6 swatch swatch--beta--red-light"><p>Red Light<br>@red-light<br>#ED888B</p></div>
+                      <div class="flex-col-1-6 swatch swatch--beta--red-lighter"><p>Red Lighter<br>@red-lighter<br>#FAE1E1</p></div>
+                      <div class="flex-col-1-6 swatch swatch--beta--orange-light"><p>Orange Light<br>@orange-light<br>#F9B999</p></div>
+                      <div class="flex-col-1-6 swatch swatch--beta--orange-lighter"><p>Orange Lighter<br>@orange-lighter<br>#FFFBF9</p></div>
+                      <div class="flex-col-1-6 swatch swatch--beta--yellow-light"><p>Yellow Light<br>@yellow-light<br>#FFEBC6</p></div>
+                      <div class="flex-col-1-6 swatch swatch--beta--blue-light"><p>Blue Light<br>@blue-light<br>#A5BDDC</p></div>
+                      <div class="flex-col-1-6 swatch swatch--beta--blue-lighter"><p>Blue Lighter<br>@blue-lighter<br>#CAEAFF</p></div>
+                      <div class="flex-col-1-6 swatch swatch--beta--blue-darker"><p>Blue Darker<br>@blue-darker<br>#32457E</p></div>
                 </div>
 
                 <div class="flex-container">
@@ -152,11 +158,15 @@
                 </div>
 
                 <div class="flex-container">
-                  <div class="flex-col-1-6 swatch swatch--mono--gray0"><p>Gray 0<br>#111</p></div>
-                  <div class="flex-col-1-6 swatch swatch--mono--gray1"><p>Gray 1<br>#333</p></div>
-                  <div class="flex-col-1-6 swatch swatch--mono--gray2"><p>Gray 2<br>#666</p></div>
-                  <div class="flex-col-1-6 swatch swatch--mono--gray3"><p>Gray 3<br>#999</p></div>
-                  <div class="flex-col-1-6 swatch swatch--mono--gray4"><p>Gray 4<br>#CCC</p></div>
+                  <div class="flex-col-1-6 swatch swatch--mono--gray0"><p>Gray 0<br>@gray-0<br>#202020</p></div>
+                  <div class="flex-col-1-6 swatch swatch--mono--gray1"><p>Gray 1<br>@gray-1<br>#404040</p></div>
+                  <div class="flex-col-1-6 swatch swatch--mono--gray2"><p>Gray 2<br>@gray-2<br>#606060</p></div>
+                  <div class="flex-col-1-6 swatch swatch--mono--gray3"><p>Gray 3<br>@gray-3<br>#808080</p></div>
+                  <div class="flex-col-1-6 swatch swatch--mono--gray4"><p>Gray 4<br>@gray-4<br>#9F9F9F</p></div>
+                  <div class="flex-col-1-6 swatch swatch--mono--gray5"><p>Gray 5<br>@gray-5<br>#BFBFBF</p></div>
+                  <div class="flex-col-1-6 swatch swatch--mono--gray6"><p>Gray 6<br>@gray-6<br>#DFDFDF</p></div>
+                  <div class="flex-col-1-6 swatch swatch--mono--gray7"><p>Gray 7<br>@gray-7<br>#EEEEEE</p></div>
+                  <div class="flex-col-1-6 swatch swatch--mono--gray8"><p>Gray 8<br>@gray-8<br>#F2F2F2</p></div>
                 </div>
 
                 </div><!-- END MAIN CONTENT -->
