--- a/public/layout.html
+++ b/public/layout.html
@@ -76,7 +76,7 @@
             <div class="main-breadcrumb__content">
                 <span class="breadcrumb__item"><a href="#">Home</a></span>
                 <span class="breadcrumb__item"><i class="icon-guillemet-right"></i><a href="index.html">Digital guide</a></span>
-                <span class="breadcrumb__item"><i class="icon-guillemet-right"></i><a>Callouts</a></span>
+                <span class="breadcrumb__item"><i class="icon-guillemet-right"></i><a>Layout</a></span>
             </div>
         </nav>
 
@@ -157,123 +157,6 @@
                   <div class="flex-col-1-4"><div class="example-box">1/4<code>flex-col-1-4</code></div></div>
                 </div>
 
-
-              <!-- Content > Typography -->
-              <div class="flex-container">
-                <div class="flex-col-2-3">
-                  <h2>Typography</h2>
-                  <p>The font used is <a href="http://www.google.com/fonts/specimen/Open+Sans">Open Sans</a> a sans font chosen for legibility and consistency in online and offline applications. The font comes in various weights, but by default we will be using:</p>
-                  <p style="font-weight: 400;">Open Sans 400</p>
-                  <p style="font-weight: 600;">Open Sans 600</p>
-                  <p style="font-weight: 700;">Open Sans 700</p>
-                  <p style="font-weight: 800;">Open Sans 800</p>
-
-                  <p>Typographic styles for content specific pages. See <a href="#">content guidelines</a> for how to write content.</p>
-                  <h1>h1 for page titles</h1>
-                  <h2>h2 sub header, for section titles</h2>
-                  <h3>h3 for headings within sections</h3>
-                  <h4>h4</h4>
-                  <h5>h5</h5>
-                  <h6>h6</h6>
-                  <p class="u-lede">This is a lead paragraph of text. Only use one of these per page, or not at all. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
-                  <p>This is a paragraph of text. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
-                  <h2>Sub header, for introducing content sections</h2>
-                  <p>This is a paragraph of text. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
-                  <h3>h3 header within sub header</h3>
-                  <p>This is a paragraph of text. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
-                  <h3>Links</h3>
-                  <ul>
-                    <li>This is a standard text <a href="#">with a link</a> and an external.</li>
-                    <li>This is a standard text <a class="a-external-link" href="#">with an external link</a>.</li>
-                    <li>This is a standard text <a class="a-pdf-doc" href="#">with a link to a pdf document</a>.</li>
-                    <li>This is a standard text <a class="a-file-doc" href="#">with a link to a html or text file</a>.</li>
-                    <li>This is a standard text <a class="a-word-doc" href="#">with a link to a word document</a>.</li>
-                    <li>This is a standard text <a class="a-excel-doc" href="#">with a link to a excel document</a>.</li>
-                  </ul>      
-                  <h3>Standard unordered list</h3>
-                  <ul>
-                    <li>Lorem ipsum dolor sit amet</li>
-                    <li>Lorem ipsum dolor sit amet</li>
-                      <ul>
-                        <li>Lorem ipsum dolor sit amet</li>
-                        <li>Lorem ipsum dolor sit amet</li>
-                      </ul>
-                    <li>Lorem ipsum dolor sit amet</li>
-                  </ul>        
-                  <h3>Standard ordered list</h3>
-                  <ol>
-                    <li>Lorem ipsum dolor sit amet</li>
-                    <li>Lorem ipsum dolor sit amet</li>
-                      <ol>
-                        <li>Lorem ipsum dolor sit amet</li>
-                        <li>Lorem ipsum dolor sit amet</li>
-                      </ol>
-                    <li>Lorem ipsum dolor sit amet</li>
-                  </ol>        
-                </div>
-              </div>
-
-              <!-- Colours -->
-                <div class="flex-container">
-                  <div class="flex-col-2-3">
-                    <h2>Typography</h2>
-                    <h3>Colour contrast</h3>
-                    <p>The colour contrast ratio for text and interactive elements should be at least 4.5:1 <a href="http://www.w3.org/TR/UNDERSTANDING-WCAG20/visual-audio-contrast-contrast.html">as recommended by the W3C</a>.</p>
-                    <h3>Brand</h3>
-                    <p>Colours as defined in the <a href="#">Brand Guidelines</a>. To be used in pairs as described below. These colours are not to be used for marketing communications such as campaigns, reporting and policy.</p>
-                  </div>
-                </div>
-                <div class="flex-container">
-                  <div class="flex-col-1-6 swatch swatch--brand--heritage-blue"><p>Heritage Blue<br>@heritage-blue<br>#004B88</p></div>
-                  <div class="flex-col-1-6 swatch swatch--brand--heritage-yellow"><p>Heritage Yellow<br>@heritage-yellow<br>#FCBB69</p></div>
-                  <div class="flex-col-1-6 swatch swatch--brand--responsible-purple"><p>Responsible Purple<br>@responsible-purple<br>#57486B</p></div>
-                  <div class="flex-col-1-6 swatch swatch--brand--responsible-aqua"><p>Responsible Aqua<br>@responsible-aqua<br>#90CE9C</p></div>
-                  <div class="flex-col-1-6 swatch swatch--brand--inventive-teal"><p>Inventive Teal<br>@inventive-teal<br>#006278</p></div>
-                  <div class="flex-col-1-6 swatch swatch--brand--inventive-pink"><p>Inventive Pink<br>@inventive-pink<br>#FBC0AD</p></div>
-                  <div class="flex-col-1-6 swatch swatch--brand--generous-green"><p>Generous Green<br>@generous-green<br>#00553F</p></div>
-                  <div class="flex-col-1-6 swatch swatch--brand--generous-mauve"><p>Generous Mauve<br>@generous-mauve<br>#B5AFD7</p></div>
-                </div>
-                <div class="flex-container">
-                  <div class="flex-col-2-3">
-                    <h3>Extended palette</h3>
-                    <p>Colours for extending the brand colours into content to make actionable indication.</p>
-                  </div>
-                </div>
-                <div class="flex-container">
-                      <div class="flex-col-1-6 swatch swatch--beta--red"><p>Beta Red<br>@beta-red<br>#B10E1E</p></div>
-                      <div class="flex-col-1-6 swatch swatch--beta--orange"><p>Beta Orange<br>@beta-orange<br>#F47738</p></div>
-                      <div class="flex-col-1-6 swatch swatch--beta--yellow"><p>Beta Yellow<br>@beta-yellow<br>#FFBF47</p></div>
-                      <div class="flex-col-1-6 swatch swatch--beta--green"><p>Beta Green<br>@beta-green<br>#006435</p></div>
-                      <div class="flex-col-1-6 swatch swatch--beta--blue-darker"><p>Beta Blue Darker<br>@beta-blue<br>#003C64</p></div>
-                      <div class="flex-col-1-6 swatch swatch--beta--blue-light"><p>Beta Blue Light<br>@beta-blue-light<br>#A5BDDC</p></div>
-                      <div class="flex-col-1-6 swatch swatch--beta--aqua"><p>Beta Aqua<br>@beta-aqua<br>#81CEC6</p></div>
-                </div>
-
-                <div class="flex-container">
-                  <div class="flex-col-2-3">
-                    <h3>Tints</h3>
-                    <p>There are also variations of some of these swatches in lighter tints.</p>
-                  </div>
-                </div>
-                <div class="flex-container">
-                      <div class="flex-col-1-6 swatch swatch--beta--yellow-light"><p>Beta Yellow-light<br>@beta-yellow-light<br>#FFBF47</p></div>
-                      <div class="flex-col-1-6 swatch swatch--beta--blue-light-tint"><p>Beta Blue Light Tint<br>@beta-blue-lighter<br>#A5BDDC</p></div>
-                </div>
-
-                <div class="flex-container">
-                  <div class="flex-col-2-3">
-                    <h3>Monochrome palette</h3>
-                    <p>Range for text primarily but also for neutral colouring.</p>
-                  </div>
-                </div>
-
-                <div class="flex-container">
-                  <div class="flex-col-1-6 swatch swatch--mono--gray0"><p>Gray 0<br>#111</p></div>
-                  <div class="flex-col-1-6 swatch swatch--mono--gray1"><p>Gray 1<br>#333</p></div>
-                  <div class="flex-col-1-6 swatch swatch--mono--gray2"><p>Gray 2<br>#666</p></div>
-                  <div class="flex-col-1-6 swatch swatch--mono--gray3"><p>Gray 3<br>#999</p></div>
-                  <div class="flex-col-1-6 swatch swatch--mono--gray4"><p>Gray 4<br>#CCC</p></div>
-                </div>
 
                 </div><!-- END MAIN CONTENT -->
             <!--/main -->
