--- a/public/colours.html
+++ b/public/colours.html
@@ -145,6 +145,7 @@
                       <div class="flex-col-1-6 swatch swatch--beta--orange-light"><p>Orange Light<br>@orange-light<br>#F9B999</p></div>
                       <div class="flex-col-1-6 swatch swatch--beta--orange-lighter"><p>Orange Lighter<br>@orange-lighter<br>#FFFBF9</p></div>
                       <div class="flex-col-1-6 swatch swatch--beta--yellow-light"><p>Yellow Light<br>@yellow-light<br>#FFEBC6</p></div>
+                      <div class="flex-col-1-6 swatch swatch--beta--yellow-darker"><p>Yellow darker<br>@yellow-heritage-darker<br>#</p></div>
                       <div class="flex-col-1-6 swatch swatch--beta--blue-light"><p>Blue Light<br>@blue-light<br>#A5BDDC</p></div>
                       <div class="flex-col-1-6 swatch swatch--beta--blue-lighter"><p>Blue Lighter<br>@blue-lighter<br>#CAEAFF</p></div>
                       <div class="flex-col-1-6 swatch swatch--beta--blue-darker"><p>Blue Darker<br>@blue-darker<br>#32457E</p></div>
