Added missing colour swatches to guide
- Also split tints and brand tints

--- a/public/colours.html
+++ b/public/colours.html
@@ -119,36 +119,50 @@
                 </div>
                 <div class="flex-container">
                   <div class="flex-col-2-3">
+                    <h3>Brand tints</h3>
+                    <p>There are also variations of some of these swatches in lighter tints.</p>
+                  </div>
+                </div>
+                <div class="flex-container">
+                      <div class="flex-col-1-6 swatch swatch--beta--heritage-blue-lighter"><p>Heritage Blue Lighter<br>@heritage-blue-lighter<br>#A2D5FF</p></div>
+                      <div class="flex-col-1-6 swatch swatch--beta--heritage-blue-lightest"><p>Heritage Blue Lightest<br>@heritage-blue-lightest<br>#F2F8FF</p></div>
+                      <div class="flex-col-1-6 swatch swatch--beta--heritage-yellow-lighter"><p>Heritage Yellow Lighter<br>@heritage-yellow-lighter<br>#FEE4C3</p></div>
+                      <div class="flex-col-1-6 swatch swatch--beta--heritage-yellow-darker"><p>Heritage Yellow Darker<br>@heritage-yellow-darker<br>#FBA437</p></div>
+                </div>
+                <div class="flex-container">
+                  <div class="flex-col-2-3">
                     <h3>Extended palette</h3>
                     <p>Colours for extending the brand colours into content to make actionable indication.</p>
                   </div>
                 </div>
                 <div class="flex-container">
                       <div class="flex-col-1-6 swatch swatch--beta--red"><p>Red<br>@red<br>#DF3034</p></div>
-                      <div class="flex-col-1-6 swatch swatch--beta--pink"><p>Pink<br>@pink<br>#FBC0AD</p></div>
+                      <div class="flex-col-1-6 swatch swatch--beta--pink"><p>Pink<br>@pink<br>#F499BE</p></div>
                       <div class="flex-col-1-6 swatch swatch--beta--orange"><p>Orange<br>@orange<br>#F47738</p></div>
                       <div class="flex-col-1-6 swatch swatch--beta--yellow"><p>Yellow<br>@yellow<br>#FFBF47</p></div>
                       <div class="flex-col-1-6 swatch swatch--beta--green"><p>Green<br>@green<br>#537D2D</p></div>
                       <div class="flex-col-1-6 swatch swatch--beta--blue"><p>Blue<br>@blue<br>#003C64</p></div>
                       <div class="flex-col-1-6 swatch swatch--beta--aqua"><p>Aqua<br>@aqua<br>#81CEC6</p></div>
                 </div>
-
                 <div class="flex-container">
                   <div class="flex-col-2-3">
-                    <h3>Tints</h3>
+                    <h3>Extended palette tints</h3>
                     <p>There are also variations of some of these swatches in lighter tints.</p>
                   </div>
                 </div>
                 <div class="flex-container">
-                      <div class="flex-col-1-6 swatch swatch--beta--red-light"><p>Red Light<br>@red-light<br>#ED888B</p></div>
-                      <div class="flex-col-1-6 swatch swatch--beta--red-lighter"><p>Red Lighter<br>@red-lighter<br>#FAE1E1</p></div>
-                      <div class="flex-col-1-6 swatch swatch--beta--orange-light"><p>Orange Light<br>@orange-light<br>#F9B999</p></div>
-                      <div class="flex-col-1-6 swatch swatch--beta--orange-lighter"><p>Orange Lighter<br>@orange-lighter<br>#FFFBF9</p></div>
-                      <div class="flex-col-1-6 swatch swatch--beta--yellow-light"><p>Yellow Light<br>@yellow-light<br>#FFEBC6</p></div>
-                      <div class="flex-col-1-6 swatch swatch--beta--yellow-darker"><p>Yellow darker<br>@yellow-heritage-darker<br>#</p></div>
+                      <div class="flex-col-1-6 swatch swatch--beta--red-light"><p>Red Light<br>@red-light<br>#E76568</p></div>
+                      <div class="flex-col-1-6 swatch swatch--beta--red-lighter"><p>Red Lighter<br>@red-lighter<br>#F2ACAD</p></div>
+                      <div class="flex-col-1-6 swatch swatch--beta--orange-light"><p>Orange Light<br>@orange-light<br>#F8A980</p></div>
+                      <div class="flex-col-1-6 swatch swatch--beta--orange-lighter"><p>Orange Lighter<br>@orange-lighter<br>#FBCAB1</p></div>
+                      <div class="flex-col-1-6 swatch swatch--beta--green-light"><p>Green Light<br>@green-light<br>#B9DB9B</p></div>
+                      <div class="flex-col-1-6 swatch swatch--beta--green-lighter"><p>Green Lighter<br>@green-lighter<br>#D3E8C1</p></div>
                       <div class="flex-col-1-6 swatch swatch--beta--blue-light"><p>Blue Light<br>@blue-light<br>#A5BDDC</p></div>
                       <div class="flex-col-1-6 swatch swatch--beta--blue-lighter"><p>Blue Lighter<br>@blue-lighter<br>#CAEAFF</p></div>
-                      <div class="flex-col-1-6 swatch swatch--beta--blue-darker"><p>Blue Darker<br>@blue-darker<br>#32457E</p></div>
+                      <div class="flex-col-1-6 swatch swatch--beta--blue-darker"><p>Blue Darker<br>@blue-darker<br>#002D4A</p></div>
+                      <div class="flex-col-1-6 swatch swatch--beta--aqua-light"><p>Aqua Light<br>@aqua-light<br>#B8E3DF</p></div>
+                      <div class="flex-col-1-6 swatch swatch--beta--yellow-light"><p>Yellow Light<br>@yellow-light<br>#FFEBC6</p></div>
+                      <div class="flex-col-1-6 swatch swatch--beta--purple-dark"><p>Purple Dark<br>@purple-dark<br>#53388D</p></div>
                 </div>
 
                 <div class="flex-container">
