--- a/public/forms.html
+++ b/public/forms.html
@@ -98,26 +98,58 @@
 
             <div class="articleContent">
 
-              <div class="col-sm-8">
+              <div class="col-md-8">
+                  <p>Forms are an essential medium to help people find the information they need, complete a task or complete an application online. By maintaining the least friction possible between starting and completing the form will ensure greater completion rates for clients with the most accurate information possible.</p>
+                  <p>Only ask for the minimum amount of information for the client to complete the task required, this means that forms are kept shorter, improving completion rate and also trust. Any fields which are optional should be indicated as such.</p>
                 <form>
+
+                <h3>Examples of form components</h3>
+                <p>Using a field for a persons full name is recommended when possible, different cultures structure names in different ways and a Firstname, Surname approach isn't always appropriate.</p>
+                <div class="example-box-plain">
                   <fieldset>
-                    <label for="exampleInputEmail1">Email address</label>
-                    <input type="email" id="exampleInputEmail1" placeholder="Enter email" required>
-                    <small>We'll never share your email with anyone else.</small>
-                    <div class="invalid">Please enter a valid email</div>
+                    <label for="standardField">Standard field</label>
+                    <input type="text" id="standardField" placeholder="">
                   </fieldset>
+                </div>
+
+                <div class="example-box-plain">
+                  <fieldset>
+                    <label for="standardField">Standard field</label>
+                    <span class="form-hint">With additional help text</span>
+                    <input type="text" id="standardField" placeholder="">
+                  </fieldset>
+                </div>
+
+                <div class="example-box-plain">
+                  <fieldset>
+                    <label for="exampleInputEmail1">Inline validation error with field placeholder</label>
+                    <input type="email" id="exampleInputEmail1" placeholder="Placeholder text" required>
+                    <small>Information about these details.</small>
+                    <div class="invalid">Please enter a valid email address</div>
+                  </fieldset>
+                </div>
+
+                <div class="example-box-plain">
                   <fieldset>
                     <label for="exampleInputPassword1">Password</label>
+                    <span class="form-hint">Enter at least 3 characters</span>
                     <input type="password" id="exampleInputPassword1" placeholder="Password" pattern=".{3,10}" required>
                     <div class="valid">Wonderful!</div>
                     <div class="invalid">Please enter a password between 3 and 10 characters</div>
                   </fieldset>
+                </div>
+
+                <div class="example-box-plain">
                   <fieldset>
-                    <label for="exampleInputPassword1">Don't fill this out</label>
+                    <label for="exampleInputPassword1">Disabled field</label>
+                    <span class="form-hint">Description why this field isn't enabled</span>
                     <input type="password" id="exampleInputPassword1" placeholder="Disabled field" disabled>
                   </fieldset>
+                </div>
+
+                <div class="example-box-plain">
                   <fieldset>
-                    <label for="exampleSelect1">Example select</label>
+                    <label for="exampleSelect1">Example dropdown select</label>
                     <div class="dropdown">
                       <select id="exampleSelect1">
                         <option>1</option>
@@ -128,8 +160,11 @@
                       </select>
                     </div>
                   </fieldset>
+                </div>
+
+                <div class="example-box-plain">
                   <fieldset>
-                    <label for="exampleSelect2">Example multiple select</label>
+                    <label for="exampleSelect2">Example dropdown multiple select</label>
                     <select multiple id="exampleSelect2" class="multi-select">
                       <option>1</option>
                       <option>2</option>
@@ -138,32 +173,64 @@
                       <option>5</option>
                     </select>
                   </fieldset>
+                </div>
+
+                <div class="example-box-plain">
                   <fieldset>
                     <label for="exampleTextarea">Example textarea</label>
                     <textarea id="exampleTextarea" rows="3"></textarea>
                   </fieldset>
+                </div>
+
+                <div class="example-box-plain">
                   <fieldset>
                     <label for="exampleInputFile">File input</label>
                     <input type="file" class="form-control-file" id="exampleInputFile">
                     <small>This is some placeholder block-level help text for the above input. It's a bit lighter and easily wraps to a new line.</small>
                   </fieldset>
+                </div>
+
+                <div class="example-box-plain">
                   <fieldset>
-                    <label for="exampleInputFile">Radio buttons</label>
-                    <label class="radio">
+                    <label for="exampleInputFile">Inline Radio buttons</label>
+                    <label class="radio--inline">
                       <input type="radio" name="radio" value="option1" checked>
                       Yes
                     </label>
-                    <label class="radio">
+                    <label class="radio--inline">
                       <input type="radio" name="radio" value="option2">
                       No
                     </label>
-                    <label class="radio disabled">
+                    <label class="radio--inline disabled">
                       <input type="radio" name="radio" value="option3" disabled>
                       Not sure
                     </label>
                   </fieldset>
+                </div>
+
+
+                <div class="example-box-plain">
                   <fieldset>
-                    <label for="exampleInputFile">Checkboxes</label>
+                    <label for="exampleInputFile">Radio buttons</label>
+                    <label class="radio radio--block">
+                      <input type="radio" name="radio" value="option1" checked>
+                      Yes
+                    </label>
+                    <label class="radio radio--block">
+                      <input type="radio" name="radio" value="option2">
+                      No
+                    </label>
+                    <label class="radio radio--block disabled">
+                      <input type="radio" name="radio" value="option3" disabled>
+                      Not sure
+                    </label>
+                  </fieldset>
+                </div>
+
+
+                <div class="example-box-plain">
+                  <fieldset>
+                    <label for="exampleInputFile">Inline checkboxes</label>
                     <label class="checkbox">
                       <input type="checkbox" name="checkbox"> Option one
                     </label>
@@ -174,7 +241,12 @@
                       <input type="checkbox" name="checkbox" disabled> Disabled
                     </label>
                   </fieldset>
-                  <button type="submit" class="btn btn-primary">Submit</button>
+                </div>
+
+                <div class="example-box-plain">
+                  <label for="buttonDescription">Buttons</label>
+                  <button type="submit" class="btn btn-primary">Submit <span class="a-icon-stack"></span></button>
+                </div>
                 </form>
               </div>
 
