Update forms and icons

--- a/public/forms.html
+++ b/public/forms.html
@@ -244,9 +244,27 @@
                 </div>
 
                 <div class="example-box-plain">
-                  <label for="buttonDescription">Buttons</label>
-                  <button type="submit" class="btn btn-primary">Submit <span class="a-icon-stack"></span></button>
+                  <label for="buttonDescription">Buttons (actions)</label>
+                  <button type="submit" class="btn btn-primary">Submit <span class="tick-button-icon"></span></button>
+                  <button type="submit" class="btn btn-primary">Continue <span class="right-button-icon"></span></button>
+                  <button type="submit" class="btn btn-primary">Back <span class="left-button-icon"></span></button>
                 </div>
+
+                <div class="example-box-plain">
+                  <label for="buttonDescription">Buttons (directions)</label>
+                  <button type="submit" class="btn btn-secondary">Submit <span class="email-button-icon"></span></button>
+                  <button type="submit" class="btn btn-secondary">Submit <span class="print-button-icon"></span></button>
+                  <button type="submit" class="btn btn-secondary">Submit <span class="restart-button-icon"></span></button>
+                  <button type="submit" class="btn btn-secondary">Submit <span class="save-button-icon"></span></button>
+                </div>
+
+                <div class="example-box-plain">
+                  <label for="buttonDescription">Buttons (additional)</label>
+                  <button type="submit" class="btn btn-disabled">Continue</button>
+                  <button type="submit" class="btn btn-warning">Warning <span class="exclamation-button-icon"></span></button>
+                  <button type="submit" class="btn btn-primary-outline">England</button>
+                </div>
+
                 </form>
               </div>
 
