Added page details

--- a/public/consumer-nav.html
+++ b/public/consumer-nav.html
@@ -139,6 +139,9 @@
 
                 <div class="title">
                     <h1 class="title__heading js-ref"><span class="title__title">Buying a used car</span></h1>
+                    <div class="title__subheading">
+                        <span class="badge--extent">England</span>&nbsp;&nbsp;Last updated Monday 24 January, 2015
+                    </div>
                 </div>
 
                 <div class="articleContent">
@@ -440,16 +443,16 @@
             <nav class="side-nav-beta">
                 <ul class="">
                     <li class="side-nav-beta__heading">
-                        <a href="">Cars and vehicles</a>
-                    </li>
-                    <li class="side-nav-beta__sibling">
-                        <a href="">Problem with a used car</a>
+                        <a href=""><span>Cars and vehicles</span></a>
                     </li>
                     <li class="side-nav-beta__sibling active">
-                        <a href="">Buying a used car</a>
+                        <a href=""><span>Buying a used car</span></a>
                     </li>
                     <li class="side-nav-beta__sibling">
-                        <a href="">Problem with a car repair</a>
+                        <a href=""><span>Problem with a used car</span></a>
+                    </li>
+                    <li class="side-nav-beta__sibling">
+                        <a href=""><span>Problem with a car repair</span></a>
                     </li>
                     </li>
                 </ul>
