Fixed title__subheading extent

--- a/public/consumer-nav.html
+++ b/public/consumer-nav.html
@@ -140,7 +140,7 @@
                 <div class="title">
                     <h1 class="title__heading js-ref"><span class="title__title">Buying a used car</span></h1>
                     <div class="title__subheading">
-                        <span class="badge--extent">England</span>&nbsp;&nbsp;Last updated Monday 24 January, 2015
+                        <a class="btn btn-primary-outline">England</a>&nbsp;Last updated Monday 24 January, 2015
                     </div>
                 </div>
 
@@ -414,7 +414,7 @@
                 </div>
             </main><!-- END MAIN CONTENT -->
 
-            <aside class="main-content__sidebar beta-extent-switcher hide-offline" data-track-zone="page-beta-extent-swticher">
+            <!--<aside class="main-content__sidebar beta-extent-switcher hide-offline" data-track-zone="page-beta-extent-swticher">
                 <h2 class="beta-extent-switcher__heading">This advice applies to England</h2>
 
                 <p>Advice can vary depending on where you live.</p>
@@ -438,7 +438,7 @@
                         </option>
                     </select> <button class="custom-dropdown__button js-track-extent" type="submit">Go</button>
                 </form>
-            </aside>
+            </aside>-->
 
             <nav class="side-nav-beta">
                 <ul class="">
