Removed collapse, replaced with revealable
- Created new revealable mixin to replace collapse mixin
-  Improved mixin to work on both new and existing html syntax
- Huge style adjustments
- Improved mixin to use the same variable layout as callouts
- Deleted modules/collapse
- Renamed mixins/collapse to mixins/revealables
- Added existing html mockup to collapse.html

--- a/public/collapse.html
+++ b/public/collapse.html
@@ -151,12 +151,15 @@
                       </div>
 
                       <section class="revealable">
-                        <h3 id="h-argument-1---you-did-the-activity-that-the-dwp-says-you-didn-t-do" class="revealable__heading" aria-controls="revealable-1" tabindex="0" aria-expanded="false" title="Expand section">
+                        <h3 id="h-argument-1---you-did-the-activity-that-the-dwp-says-you-didn-t-do" class="revealable__heading" aria-controls="revealable-1" tabindex="0" aria-expanded="true" title="Expand section">
                           <i class="revealable__icon" aria-hidden="true"></i>Argument 1 - You did the activity that the DWP says you didn't do
                         </h3>
                         <div class="revealable__content" id="revealable-1" aria-expanded="false" aria-hidden="true">
                           <p>If you did do the tasks that the DWP says you didn’t, you should ask the DWP to&nbsp;reconsider the decision to sanction you. You’ll have to give them evidence that you did the tasks. For example, a copy of your application form for a job, or a letter from a company confirming you attended training or work experience.</p><a href="#" class="revealable__close"><i class="icon-chevron-up" aria-hidden="true"></i>Close</a>
                         </div>
+                        <h3 id="h-argument-2---you-did-the-activity-that-the-dwp-says-you-didn-t-do" class="revealable__heading" aria-controls="revealable-2" tabindex="0" aria-expanded="false" title="Expand section">
+                          <i class="revealable__icon" aria-hidden="true"></i>Argument 2 - You did the activity that the DWP says you didn't do
+                        </h3>
                       </section>
 
                     </div>
