Integrated existing print stylesheet
- Added to all pages

--- a/public/callout.html
+++ b/public/callout.html
@@ -22,8 +22,8 @@
   <!-- Stylesheet
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href="css/main.css" media="screen" rel="stylesheet">
     <link href="css/site.css" media="screen" rel="stylesheet">
+    <link href="css/print.css" media="print" rel="stylesheet">
     <link href="https://www.citizensadvice.org.uk/static/css/print.css" media="print" rel="stylesheet">
     <link href="https://www.citizensadvice.org.uk/static/layout/favicon.ico" rel="shortcut icon">
     <link href="https://www.citizensadvice.org.uk/static/images/apple-touch-icon.png" rel="apple-touch-icon">
@@ -54,7 +54,7 @@
 
     <header class="main-header">
         <div class="main-header__content main-content">
-            <a class="main-header__logo" href="" title="Citizens Advice home"><img alt="Citizens Advice" onerror="this.onerror=null;this.src=&#39;/Static/images/logos/ca-logo_100px.svg.png&#39;;" src="assets/images/ca-logo_100px.svg"></a>
+            <a class="main-header__logo no-print" href="" title="Citizens Advice home"><img alt="Citizens Advice" onerror="this.onerror=null;this.src=&#39;/Static/images/logos/ca-logo_100px.svg.png&#39;;" src="assets/images/ca-logo_100px.svg"></a><img class="print-only logo" src="assets/images/ca-logo-hz-280px.svg">
 
             <!--div class="main-header__links" data-track-zone="top-bar">
                 <a class="main-header__menu-link js-toggle-menu" href=""><i class="icon-menu"></i>Menu</a>
