Update modal and links styling

--- a/public/forms.html
+++ b/public/forms.html
@@ -247,7 +247,9 @@
                   <label for="buttonDescription">Buttons (actions)</label>
                   <button type="submit" class="btn btn-primary">Submit <span class="tick-button-icon"></span></button>
                   <button type="submit" class="btn btn-primary">Continue <span class="right-button-icon"></span></button>
-                  <button type="submit" class="btn btn-primary">Back <span class="left-button-icon"></span></button>
+                  <!-- Recommending we use the lighter back button to differentiate between purposes
+                  <button type="submit" class="btn btn-primary">Back <span class="left-button-icon"></span></button-->
+                  <button type="submit" class="btn btn-primary-light">Back <span class="left-button-icon"></span></button>
                 </div>
 
                 <div class="example-box-plain">
