--- a/public/consumer-index.html
+++ b/public/consumer-index.html
@@ -45,7 +45,7 @@
 
     <header class="main-header">
         <div class="main-header__content">
-            <a class="main-header__logo" href="" title="Citizens Advice home"><img alt="Citizens Advice" onerror="this.onerror=null;this.src=&#39;/Static/images/logos/ca-logo_100px.svg.png&#39;;" src="assets/images/ca-logo_100px.svg"></a>
+            <a class="main-header__logo no-print" href="" title="Citizens Advice home"><img alt="Citizens Advice" onerror="this.onerror=null;this.src=&#39;/Static/images/logos/ca-logo_100px.svg.png&#39;;" src="assets/images/ca-logo_100px.svg"></a><img class="print-only logo" src="assets/images/ca-logo-hz-280px.svg">
 
             <div class="main-header__links" data-track-zone="top-bar">
                 <a class="main-header__menu-link js-toggle-menu" href=""><i class="icon-menu"></i>Menu</a>
