Update links styling

--- a/public/sharing.html
+++ b/public/sharing.html
@@ -229,13 +229,13 @@ document.getElementById("demo").innerHTML = txt;
 
                     <div class="title__subheading">
                         <p>Share this page</p>
-                            <a class="a-social-twitter" href="https://twitter.com/share?url=" data-track="Twitter" rel="external">Twitter</a>
+                            <a class="a-social-twitter" href="https://twitter.com/share?url=" data-track="Twitter" rel="external"><span>Twitter</span></a>
                         
-                            <a class="a-social-facebook" href="https://www.facebook.com/sharer/sharer.php?u=" data-track="Facebook" rel="external">Facebook</a>
+                            <a class="a-social-facebook" href="https://www.facebook.com/sharer/sharer.php?u=" data-track="Facebook" rel="external"><span>Facebook</span></a>
                         
-                            <a class="a-social-google-plus" href="https://plus.google.com/share?url=" data-track="Google+" rel="external">Google Plus</a>
+                            <a class="a-social-google-plus" href="https://plus.google.com/share?url=" data-track="Google+" rel="external"><span>Google Plus</span></a>
 
-                            <a class="a-social-whatsapp" href="whatsapp://send" data-text="share?url=" data-track="whatsapp" rel="external">Whatsapp</a>
+                            <a class="a-social-whatsapp" href="whatsapp://send" data-text="share?url=" data-track="whatsapp" rel="external"><span>Whatsapp</span></a>
                     </div>
 
 
