Added date field to forms

--- a/public/forms.html
+++ b/public/forms.html
@@ -163,6 +163,23 @@
                 </div>
 
                 <div class="example-box-plain">
+                    <fieldset>
+                        <div class="form-group-date">
+                            <label for="dob-day">Day</label>
+                            <input type="number" id="dob-day" placeholder="DD" max="31" min="1">
+                        </div>
+                        <div class="form-group-date">
+                            <label for="dob-month">Month</label>
+                            <input type="number" id="dob-month" placeholder="MM" max="12" min="1">
+                        </div>
+                        <div class="form-group-date">
+                            <label for="dob-Year">Year</label>
+                            <input type="number" id="dob-year" placeholder="YYYY" max="2100">
+                        </div>
+                    </fieldset>
+                </div>
+
+                <div class="example-box-plain">
                   <fieldset>
                     <label for="exampleSelect2">Example dropdown multiple select</label>
                     <select multiple id="exampleSelect2" class="multi-select">
@@ -226,6 +243,7 @@
                     </label>
                   </fieldset>
                 </div>
+
 
 
                 <div class="example-box-plain">
