--- a/public/index.html
+++ b/public/index.html
@@ -104,6 +104,9 @@
                     <h2>Contents</h2>
                     <ul>
                       <li><a href="layout.html">Layout</a></li>
+                      <ul>
+                          <li><a href="advice-content.html">Advice content</a></li>
+                      </ul>
                       <li><a href="typography.html">Typography</a></li>
                       <li><a href="colours.html">Colours</a></li>
                       <li><a href="callout.html">Callout</a></li>
