--- a/public/layout.html
+++ b/public/layout.html
@@ -100,7 +100,7 @@
 
               <!-- Content > Layout -->
               <div class="flex-container">
-                <div class="col-md-8">
+                <div class="flex-col-2-3">
                   <p>The default page width is 1080px with a 12-column grid. It is recommended for most content to use the two-thirds (content first) layout. This restricts line length to a more managable size and encourages a better reading pattern, <a href="#">improving cognition</a>.</p>
 
                   The layout for pages should be 12 columns (full width), 3 or 4 column, other variations can be used if needed.</p>
