Update back button
– Move span to before label on button

--- a/public/forms.html
+++ b/public/forms.html
@@ -262,20 +262,20 @@
                 </div>
 
                 <div class="example-box-plain">
-                  <label for="buttonDescription">Buttons (actions)</label>
-                  <button type="submit" class="btn btn-primary">Submit <span class="tick-button-icon"></span></button>
+                  <label for="buttonDescription">Buttons (directions)</label>
+                  <button type="submit" class="btn btn-primary-light"><span class="left-button-icon"></span> Back</button>
                   <button type="submit" class="btn btn-primary">Continue <span class="right-button-icon"></span></button>
+                  <button type="submit" class="btn btn-primary">Submit <span class="tick-button-icon"></span></button>
                   <!-- Recommending we use the lighter back button to differentiate between purposes
                   <button type="submit" class="btn btn-primary">Back <span class="left-button-icon"></span></button-->
-                  <button type="submit" class="btn btn-primary-light">Back <span class="left-button-icon"></span></button>
                 </div>
 
                 <div class="example-box-plain">
-                  <label for="buttonDescription">Buttons (directions)</label>
-                  <button type="submit" class="btn btn-secondary">Submit <span class="email-button-icon"></span></button>
-                  <button type="submit" class="btn btn-secondary">Submit <span class="print-button-icon"></span></button>
-                  <button type="submit" class="btn btn-secondary">Submit <span class="restart-button-icon"></span></button>
-                  <button type="submit" class="btn btn-secondary">Submit <span class="save-button-icon"></span></button>
+                  <label for="buttonDescription">Buttons (actions)</label>
+                  <button type="submit" class="btn btn-secondary">Email <span class="email-button-icon"></span></button>
+                  <button type="submit" class="btn btn-secondary">Print <span class="print-button-icon"></span></button>
+                  <button type="submit" class="btn btn-secondary">Restart <span class="restart-button-icon"></span></button>
+                  <button type="submit" class="btn btn-secondary">Save <span class="save-button-icon"></span></button>
                 </div>
 
                 <div class="example-box-plain">
