New btn-icon mixin
- New button icon mixin allows for icons to be added to buttons without
a span and with more control over left and right positioning
- Updated button classes
- Updated buttons on forms.html
- Removed old icon mixin

--- a/public/forms.html
+++ b/public/forms.html
@@ -263,25 +263,25 @@
 
                 <div class="example-box-plain">
                   <label for="buttonDescription">Buttons (directions)</label>
-                  <button type="submit" class="btn btn-primary-light"><span class="left-button-icon"></span> Back</button>
-                  <button type="submit" class="btn btn-primary">Continue <span class="right-button-icon"></span></button>
-                  <button type="submit" class="btn btn-primary">Submit <span class="tick-button-icon"></span></button>
+                  <button type="submit" class="btn btn-primary-light left-button-icon">Back</button>
+                  <button type="submit" class="btn btn-primary right-button-icon">Continue</button>
+                  <button type="submit" class="btn btn-primary tick-button-icon">Submit</button>
                   <!-- Recommending we use the lighter back button to differentiate between purposes
                   <button type="submit" class="btn btn-primary">Back <span class="left-button-icon"></span></button-->
                 </div>
 
                 <div class="example-box-plain">
                   <label for="buttonDescription">Buttons (actions)</label>
-                  <button type="submit" class="btn btn-secondary">Email <span class="email-button-icon"></span></button>
-                  <button type="submit" class="btn btn-secondary">Print <span class="print-button-icon"></span></button>
-                  <button type="submit" class="btn btn-secondary">Restart <span class="restart-button-icon"></span></button>
-                  <button type="submit" class="btn btn-secondary">Save <span class="save-button-icon"></span></button>
+                  <button type="submit" class="btn btn-secondary email-button-icon">Email</button>
+                  <button type="submit" class="btn btn-secondary print-button-icon">Print</button>
+                  <button type="submit" class="btn btn-secondary restart-button-icon">Restart</button>
+                  <button type="submit" class="btn btn-secondary save-button-icon">Save</button>
                 </div>
 
                 <div class="example-box-plain">
                   <label for="buttonDescription">Buttons (additional)</label>
                   <button type="submit" class="btn btn-disabled">Continue</button>
-                  <button type="submit" class="btn btn-warning">Warning <span class="exclamation-button-icon"></span></button>
+                  <button type="submit" class="btn btn-warning exclamation-button-icon">Warning</button>
                   <button type="submit" class="btn btn-primary-outline">England</button>
                 </div>
 
