Add long form advice example page

--- a/public/index.html
+++ b/public/index.html
@@ -105,7 +105,7 @@
                     <ul>
                       <li><a href="layout.html">Layout</a></li>
                       <ul>
-                          <li><a href="advice-content.html">Advice content</a></li>
+                          <li><a href="long-form.html">Long form content</a></li>
                       </ul>
                       <li><a href="typography.html">Typography</a></li>
                       <li><a href="colours.html">Colours</a></li>
